# ArkCrop

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/common/: args.cpp  args.h  logger.cpp  logger.h
src/handlers/: image.cpp  image.h
src/http/: server.cpp  server.h
src/utils/: http.cpp  http.h
